# model

./: .gitignore  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: model.md
src/minmaxrnc/: __init__.py  minmax_layer.py  minmax_neuron.py  minmax_operator.py  minmax_rnc.py  minmax_rnc_lm.py  minmax_scan.py
src/minmaxrnc/modules/: basic_conv.py  feedforward.py  gated_conv.py  initialisers.py
tests/: test_minmax.py
